fixed text align bug

--- a/app/views/style.sass
+++ b/app/views/style.sass
@@ -250,23 +250,24 @@ code
   width: 16px
   height: 16px
   padding: 3px
-  &.left-align
-    background: #ddd url("/images/icons/text_align_left.png") no-repeat 3px 3px
-    border-radius: 3px 0 0 3px
-    border-right: none
-    &.selected
-      background: #5dc5fe url("/images/icons/text_align_left.png") no-repeat 3px 3px
-  &.center-align
-    background: #ddd url("/images/icons/text_align_center.png") no-repeat 3px 3px
-    border-radius: 0
-    &.selected
-      background: #5dc5fe url("/images/icons/text_align_center.png") no-repeat 3px 3px
-  &.right-align
-    background: #ddd url("/images/icons/text_align_right.png") no-repeat 3px 3px
-    border-radius: 0 3px 3px 0
-    border-left: none
-    &.selected
-      background: #5dc5fe url("/images/icons/text_align_right.png") no-repeat 3px 3px
+  &.align
+    &.left
+      background: #ddd url("/images/icons/text_align_left.png") no-repeat 3px 3px
+      border-radius: 3px 0 0 3px
+      border-right: none
+      &.selected
+        background: #5dc5fe url("/images/icons/text_align_left.png") no-repeat 3px 3px
+    &.center
+      background: #ddd url("/images/icons/text_align_center.png") no-repeat 3px 3px
+      border-radius: 0
+      &.selected
+        background: #5dc5fe url("/images/icons/text_align_center.png") no-repeat 3px 3px
+    &.right
+      background: #ddd url("/images/icons/text_align_right.png") no-repeat 3px 3px
+      border-radius: 0 3px 3px 0
+      border-left: none
+      &.selected
+        background: #5dc5fe url("/images/icons/text_align_right.png") no-repeat 3px 3px
   &.bold
     border-radius: 3px 0 0 3px
     border-right: none
